# pokemon-damage-calculator

./: .gitignore  README.md  pyproject.toml
data/: learnsets.json  pokedex.json  species.json
src/pokemon_damage_calculator/: __init__.py  utils.py
src/pokemon_damage_calculator/calc/: base_power_callbacks.py  calcbuilder.py  damage_calc.py  pokemon.py  speed_queue.py  utils.py
src/pokemon_damage_calculator/data/: __init__.py
src/pokemon_damage_calculator/model/: enums.py  logic.py  models.py  natures.py
src/scripts/: rank_moves.py
src/test/: test_base_power_callback.py  test_calc.py  test_ignore_abilities.py  test_stat_abilities.py  test_terrain.py  test_unique_abilities.py  test_weather.py  testutils.py
